Mon Oct 23 12:37:06 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* cvs.h: Don't declare valloc.  Some systems (e.g. linux) declare
	it in stdlib.h in a conflicting way.

Mon Oct 23 08:41:25 1995  Jim Meyering  (meyering@comco.com)

	* commit.c (commit_filesdoneproc): Use getline instead of fgets.

	* logmsg.c (do_editor): Use getline instead of fgets.
	(rcsinfo_proc): Likewise.

	* logmsg.c (do_editor): Lose if fclose of temp file output
	stream fails.

Mon Oct 23 11:59:41 1995  Norbert Kiesel  <nk@col.sw-ley.de>

	* cvs.h: add valloc declaration

	* server.h: add server_cleanup prototype

	* server.c: remove server_cleanup prototype

	* mkmodules.c (server_cleanup): fix parameter type

	* server.c: encapsulate wait_sig in #ifdef sun (it's only used in
	  code which is also encapsulated in #ifdef sun)

	* rcscmds.c (RCS_deltag, RCS_lock): add definition of noerr
	  parameter

	* error.c: include cvs.h instead of config.h, add USE(rcsid)

	* error.c (error): fix parameter type

	* update.c (join_file): encapsulate recent changes from garyo
	  within #ifdef SERVER_SUPPORT

Sun Oct 22 13:47:53 1995  J.T. Conklin  <jtc@slave.cygnus.com>

	* client.c (update_entries): Fix memory leak; free mode_string and
	file_timestamp.
	(send_fileproc): Fix memory leak; call freevers_ts before exiting.

	* module.c (do_module): Partially fix memory leak; added
	variable so that the address of memory allocated by line2argv
	is retained, but comment out the call to free_names.  Freeing
 	the vector at that point loses because some of the elements
	may be used later in the function.
	(cat_module): fix memory leak.

	* recurse.c (start_recursion): Fix memory leak; free return
	value of Name_Repository after it has been used.

Sat Oct 21 23:24:26 1995  Jim Meyering  (meyering@comco.com)

	* client.c (send_modified) [LINES_CRLF_TERMINATED]: Comment text
	after #endif.

Fri Oct 20 14:41:49 1995  Jim Kingdon  <kingdon@harvey.cyclic.com>
